Integrate backend and frontend
