# backend/user-service/controller/auth-controller.ts
@@ -5,7 +5,10 @@ import { findUserByEmail as _findUserByEmail } from "../model/repository.js";
 import { formatUserResponse } from "./user-controller.js";
 import { AuthenticatedRequest } from "../types/request.js";
 
-export async function handleLogin(req: AuthenticatedRequest, res: Response): Promise<Response> {
+export async function handleLogin(
+  req: AuthenticatedRequest,
+  res: Response
+): Promise<Response> {
   const { email, password } = req.body;
   if (email && password) {
     try {
@@ -28,9 +31,10 @@ export async function handleLogin(req: AuthenticatedRequest, res: Response): Pro
           expiresIn: "7d",
         }
       );
-      return res
-        .status(200)
-        .json({ message: "User logged in", data: { accessToken, ...formatUserResponse(user) } });
+      return res.status(200).json({
+        message: "User logged in",
+        data: { accessToken, ...formatUserResponse(user) },
+      });
     } catch (err) {
       return res.status(500).json({ message: "Server error", err });
     }
@@ -45,7 +49,9 @@ export async function handleVerifyToken(
 ): Promise<Response> {
   try {
     const verifiedUser = req.user;
-    return res.status(200).json({ message: "Token verified", data: verifiedUser });
+    return res
+      .status(200)
+      .json({ message: "Token verified", data: verifiedUser });
   } catch (err) {
     return res.status(500).json({ message: "Server error", err });
   }
